--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,25 @@ body {
   color:var(--primary-title-color) ;
 }
 
+img {
+  display: block;
+  }
+  
+  h1, h2, h3, h4, h5, h6, p {
+    margin: 0px;
+    margin-bottom: 0px;
+  }
+
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid black;
+  
+}
+
 
 .link {
   text-decoration: none;
