--- a/css/styles.css
+++ b/css/styles.css
@@ -11,21 +11,29 @@ body {
 }
 
 img {
-  display: block;
+    display: block;
+    max-width: 100%;
+    height: auto;
   }
   
   h1, h2, h3, h4, h5, h6, p {
     margin: 0px;
     margin-bottom: 0px;
   }
-
+  
+ul {
+  margin: 0px;
+  padding: 0px;
+}
 
 .container {
   width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid black;
+  outline: 1px solid red;
+  /* background-color: green; */
+  
   
 }
 
@@ -38,6 +46,7 @@ img {
 }
 
 .header-logo {
+  margin-right: 90px;
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -59,6 +68,44 @@ img {
   }
 
 /* ---------- Header -------- */
+
+.header{
+ 
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+
+}
+
+
+.header-navigation { 
+  display: flex;
+  align-items: center;
+}
+
+.header-list-nav{
+  display: flex;
+
+}
+
+.header-item:not(:last-child){
+  margin-right: 50px;
+}
+
+.header-contact-list { 
+  display: flex;
+  margin-left: auto;
+
+}
+
+.header-mail-link{
+  margin-right: 50px;
+}
+
 
 .header-link {
   font-weight: 500;
@@ -92,10 +139,20 @@ img {
 
 /* ---------- Banner -------- */
 
-.baner {
+.banner {
   background-color: #2f303a;
+ 
+  text-align: center;
 }
-.banner-title {
+
+.banner-container {
+  
+  
+}
+
+.banner-title { 
+  margin-bottom: 30px;
+  
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
@@ -106,6 +163,10 @@ img {
 }
 
 .banner-button {
+
+ margin-bottom: 300px;
+
+
   background-color: var(--accent-color) ; 
   font-weight: 700;
   font-size: 16px;
@@ -121,7 +182,29 @@ img {
 
 /* ---------- Studio -------- */
 
+.studio {
+
+}
+
+.studio-list { 
+  display: flex;
+  padding-top: 95px;
+
+
+}
+.studio-text {
+  display: flex;
+  display: block;
+  max-width: 270px;
+  margin-bottom: 94px;
+}
+
+.studio-text{
+  margin-right: 30px;
+}
+
 .studio-title {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: calc(16 / 14);
