--- a/css/styles.css
+++ b/css/styles.css
@@ -7,20 +7,26 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #ffffff;
-  color:var(--primary-title-color) ;
+  color: var(--primary-title-color);
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  h1, h2, h3, h4, h5, h6, p {
-    margin: 0px;
-    margin-bottom: 0px;
-  }
-  
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0px;
+  margin-bottom: 0px;
+}
+
 ul {
   margin: 0px;
   padding: 0px;
@@ -33,16 +39,24 @@ ul {
   padding-right: 15px;
   outline: 1px solid red;
   /* background-color: green; */
-  
-  
 }
-
 
 .link {
   text-decoration: none;
 }
 .list {
   list-style: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
 }
 
 .header-logo {
@@ -62,15 +76,13 @@ ul {
   font-size: 0;
 }
 
-.header-list-nav .current-page{
-  color: var(--accent-color)
-  
-  }
+.header-list-nav .current-page {
+  color: var(--accent-color);
+}
 
 /* ---------- Header -------- */
 
-.header{
- 
+.header {
 }
 
 .header-container {
@@ -78,34 +90,29 @@ ul {
   align-items: center;
   padding-top: 25px;
   padding-bottom: 25px;
-
 }
 
-
-.header-navigation { 
+.header-navigation {
   display: flex;
   align-items: center;
 }
 
-.header-list-nav{
+.header-list-nav {
   display: flex;
-
 }
 
-.header-item:not(:last-child){
+.header-item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-contact-list { 
+.header-contact-list {
   display: flex;
   margin-left: auto;
-
 }
 
-.header-mail-link{
+.header-mail-link {
   margin-right: 50px;
 }
-
 
 .header-link {
   font-weight: 500;
@@ -141,18 +148,14 @@ ul {
 
 .banner {
   background-color: #2f303a;
- 
-  text-align: center;
 }
 
 .banner-container {
-  
-  
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
-.banner-title { 
-  margin-bottom: 30px;
-  
+.banner-title {
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
@@ -163,11 +166,7 @@ ul {
 }
 
 .banner-button {
-
- margin-bottom: 300px;
-
-
-  background-color: var(--accent-color) ; 
+  background-color: var(--accent-color);
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
@@ -177,31 +176,30 @@ ul {
   letter-spacing: 0.06em;
   cursor: pointer;
 
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 /* ---------- Studio -------- */
 
 .studio {
-
 }
 
-.studio-list { 
+.studio-list {
   display: flex;
   padding-top: 95px;
-
-
 }
+
 .studio-text {
   display: flex;
+
   display: block;
   max-width: 270px;
   margin-bottom: 94px;
 }
 
-.studio-text{
+/* .studio-text {
   margin-right: 30px;
-}
+} */
 
 .studio-title {
   margin-bottom: 10px;
@@ -289,8 +287,6 @@ ul {
   color: #ffffff;
 }
 
-
-
 .footer-mail-link:hover,
 .footer-mail-link:focus {
   color: var(--accent-color);
@@ -310,51 +306,45 @@ ul {
   color: rgba(255, 255, 255, 0.6);
 }
 
-
-
 /* --------------- PORTFOLIO --------------- */
 
 /* ---------- Hiro -------- */
 
 .gallery {
-  
 }
-.navigator-button .current-btn{
+.navigator-button .current-btn {
   background-color: var(--accent-color);
-  color:#f5f4fa;
-  }
-
-.btn{
-font-family: Roboto;
-font-weight: 500;
-font-size: 16px;
-line-height: calc(26 / 16);
-letter-spacing: 0.03em;
-text-align: center;
-border: none;
-cursor:pointer;
-background-color:  #F5F4FA;
+  color: #f5f4fa;
 }
 
-
-.btn:hover, 
-.btn:focus{
- background-color: var(--accent-color); ;
-  color: #ffffff
-
+.btn {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(26 / 16);
+  letter-spacing: 0.03em;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  background-color: #f5f4fa;
 }
 
+.btn:hover,
+.btn:focus {
+  background-color: var(--accent-color);
+  color: #ffffff;
+}
 
 /* ------Gallery------ */
 
-.gallery-title { 
+.gallery-title {
   font-weight: 700;
   font-size: 18px;
   line-height: calc(36 / 18);
 }
 
-.gallery-text { 
+.gallery-text {
   font-size: 16px;
   line-height: calc(30 / 16);
-  color: var(--primary-text-color)
+  color: var(--primary-text-color);
 }
