--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,10 @@ ul {
 }
 
 .banner-title {
+  max-width: 696px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
@@ -166,6 +170,8 @@ ul {
 }
 
 .banner-button {
+  margin: 0 auto;
+
   background-color: var(--accent-color);
   font-weight: 700;
   font-size: 16px;
@@ -186,7 +192,9 @@ ul {
 
 .studio-list {
   display: flex;
-  padding-top: 95px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  justify-content: space-between;
 }
 
 .studio-text {
@@ -194,12 +202,12 @@ ul {
 
   display: block;
   max-width: 270px;
-  margin-bottom: 94px;
+  min-height: 75px;
 }
 
-/* .studio-text {
-  margin-right: 30px;
-} */
+.studio-text {
+  display: flex;
+}
 
 .studio-title {
   margin-bottom: 10px;
@@ -221,11 +229,20 @@ ul {
 /* ---------- Work -------- */
 
 .work-title {
+  margin-bottom: 50px;
+  text-align: center;
+
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
   letter-spacing: 0.03em;
   color: var(--primary-title-color);
+}
+
+.work-list {
+  display: flex;
+  padding-bottom: 94px;
+  justify-content: space-between;
 }
 
 /* ---------- Team -------- */
@@ -235,6 +252,9 @@ ul {
 }
 
 .team-title {
+  padding-top: 94px;
+  text-align: center;
+
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
@@ -246,7 +266,7 @@ ul {
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
-  text-align: center;
+  /* text-align: center; */
   letter-spacing: 0.03em;
 
   color: var(--primary-title-color);
@@ -254,7 +274,7 @@ ul {
 .team-member-text {
   font-size: 16px;
   line-height: calc(19 / 16);
-  text-align: center;
+  /* text-align: center; */
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
