--- a/css/styles.css
+++ b/css/styles.css
@@ -28,8 +28,8 @@ p {
 }
 
 ul {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding-left: 0;
 }
 
 .container {
@@ -151,6 +151,9 @@ ul {
 }
 
 .banner-container {
+  display: flex;
+  display: block;
+
   padding-top: 200px;
   padding-bottom: 200px;
 }
@@ -171,6 +174,11 @@ ul {
 
 .banner-button {
   margin: 0 auto;
+  width: 200px;
+  padding-left: 32px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 4px;
 
   background-color: var(--accent-color);
   font-weight: 700;
@@ -227,11 +235,12 @@ ul {
 }
 
 /* ---------- Work -------- */
+.work {
+}
 
 .work-title {
-  margin-bottom: 50px;
   text-align: center;
-
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
@@ -241,8 +250,16 @@ ul {
 
 .work-list {
   display: flex;
+  flex-wrap: wrap;
   padding-bottom: 94px;
-  justify-content: space-between;
+  margin-right: -30px;
+  margin-top: -30px;
+}
+
+.work-list-cards {
+  flex-basis: calc(100% / 3 - 30px);
+  margin-right: 30px;
+  margin-top: 30px;
 }
 
 /* ---------- Team -------- */
@@ -252,8 +269,8 @@ ul {
 }
 
 .team-title {
-  padding-top: 94px;
   text-align: center;
+  margin-bottom: 50px;
 
   font-weight: 700;
   font-size: 36px;
@@ -262,21 +279,39 @@ ul {
   color: var(--primary-title-color);
 }
 
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+}
+
+.team-master {
+  flex-basis: calc(100% / 4 - 30px);
+  margin-right: 30px;
+  padding-bottom: 94px;
+}
+
 .team-member-name {
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
-  /* text-align: center; */
+  text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 10px;
 
   color: var(--primary-title-color);
 }
 .team-member-text {
   font-size: 16px;
   line-height: calc(19 / 16);
-  /* text-align: center; */
+  text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+
+.team-master-bottom {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 /* ---------- Footer -------- */
@@ -284,8 +319,16 @@ ul {
 .footer {
   background-color: #2f303a;
 }
+.footer-cont {
+  display: flex;
+  flex-direction: column;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 
 .footer-logo {
+  margin-bottom: 20px;
+
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -299,6 +342,8 @@ ul {
 }
 
 .footer-address {
+  margin-bottom: 9px;
+
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -357,6 +402,25 @@ ul {
 
 /* ------Gallery------ */
 
+.navigator-button {
+  display: flex;
+
+  justify-content: center;
+  padding-top: 94px;
+
+  padding-bottom: 50px;
+}
+
+.navigator-btn:not(:last-child) {
+  margin-right: 8px;
+}
+
+.btn {
+  height: 32px;
+  padding-top: 6px 22px;
+  border-radius: 4px;
+}
+
 .gallery-title {
   font-weight: 700;
   font-size: 18px;
@@ -367,4 +431,25 @@ ul {
   font-size: 16px;
   line-height: calc(30 / 16);
   color: var(--primary-text-color);
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 94px;
+  margin-right: -30px;
+  margin-top: -30px;
+}
+
+.gallery-cards {
+  flex-basis: calc(100% / 3 - 30px);
+  margin-right: 30px;
+  margin-top: 30px;
+}
+
+.gallery-text-botton {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  border-top: none;
 }
