--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ ul {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   /* background-color: green; */
 }
 
