--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,8 @@ ul {
 /* ---------- Header -------- */
 
 .header {
+  border: none;
+  border-bottom: 1px solid rgba(236, 236, 236, 1);
 }
 
 .header-container {
@@ -156,6 +158,8 @@ ul {
 
   padding-top: 200px;
   padding-bottom: 200px;
+
+  /* outline: 1px solid rgb(133, 81, 81); */
 }
 
 .banner-title {
@@ -179,6 +183,7 @@ ul {
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 4px;
+  border: none;
 
   background-color: var(--accent-color);
   font-weight: 700;
@@ -198,11 +203,16 @@ ul {
 .studio {
 }
 
-.studio-list {
-  display: flex;
+.studio-container {
   padding-top: 94px;
   padding-bottom: 94px;
+  /* outline: 1px solid rgb(133, 81, 81); */
+}
+
+.studio-list {
+  display: flex;
   justify-content: space-between;
+  /* outline: 1px solid rgb(133, 81, 81); */
 }
 
 .studio-text {
@@ -238,6 +248,11 @@ ul {
 .work {
 }
 
+.work-container {
+  padding-bottom: 94px;
+  /* outline: 1px solid rgb(133, 81, 81); */
+}
+
 .work-title {
   text-align: center;
   margin-bottom: 50px;
@@ -251,7 +266,7 @@ ul {
 .work-list {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 94px;
+
   margin-right: -30px;
   margin-top: -30px;
 }
@@ -266,6 +281,7 @@ ul {
 
 .team {
   background-color: #f5f4fa;
+  padding-top: 94px;
 }
 
 .team-title {
@@ -283,12 +299,19 @@ ul {
   display: flex;
   flex-wrap: wrap;
   margin-right: -30px;
+  margin-top: -30px;
+  padding-bottom: 94px;
 }
 
 .team-master {
   flex-basis: calc(100% / 4 - 30px);
   margin-right: 30px;
-  padding-bottom: 94px;
+  margin-top: 30px;
+
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-member-name {
@@ -319,7 +342,7 @@ ul {
 .footer {
   background-color: #2f303a;
 }
-.footer-cont {
+.footer-container {
   display: flex;
   flex-direction: column;
   padding-top: 60px;
@@ -402,13 +425,18 @@ ul {
 
 /* ------Gallery------ */
 
+.portfolio-container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  /* outline: 1px solid rgb(133, 81, 81); */
+}
+
 .navigator-button {
   display: flex;
 
   justify-content: center;
-  padding-top: 94px;
 
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .navigator-btn:not(:last-child) {
@@ -416,8 +444,9 @@ ul {
 }
 
 .btn {
+  padding-right: 22px;
+  padding-left: 22px;
   height: 32px;
-  padding-top: 6px 22px;
   border-radius: 4px;
 }
 
@@ -436,7 +465,6 @@ ul {
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 94px;
   margin-right: -30px;
   margin-top: -30px;
 }
@@ -451,5 +479,11 @@ ul {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
   border-top: none;
+}
+
+.footer-mail {
+  margin-bottom: 9px;
 }
